[tool.poetry]

name = "SSL_exp"

version = "0.0.1"

description = ""

authors = []

readme = "README.md"

packages = [{include = "mixmatch_code"}]



[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.9, <3.10"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
pandas = "^1.4.2"

torch = "^1.11.0"
torchvision = "^0.12.0"
click = "^8.1.3"
seaborn = "^0.11.2"
scipy = "^1.8.1"
loguru = "^0.6.0"
tqdm = "^4.64.0"
PyYAML = "^6.0"
pytest = "^7.2.0"
kymatio = "^0.3.0"
progress = "^1.6"

[tool.poetry.group.dev.dependencies]
bpython = "^0.22.1"
yapf = "^0.32.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
